# university-student

./: CMakeLists.txt
include/: student.h
lib/: sqlite3.lib
src/: main.c  student.c  test.c
